# dj-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  se.jl-media.dj.gschema.xml
docs/: architecture.md  audio-format-strategy.md  build.md  development-log.md  dlna-samsung-casting.md  features.md  player-queue.md  player-redesign.md  player-ui.md  rekordbox-schema.md  tizen-app.md  transcode-benchmark.md
docs/developer-guides/: architecture-conventions.md
examples/: bench_pipeline.rs  schema_dump.rs
migration/: migrate_giggs.py
scripts/: isrc_scan.py
src/: config.rs  db.rs  deck.rs  dlna.rs  gig.rs  lib.rs  librespot_player.rs  main.rs  matcher.rs  rekordbox.rs  server.rs  spotify.rs  tags.rs  transcode.rs  views.rs
src/custom_button/: imp.rs  mod.rs
src/custom_window/: imp.rs  mod.rs
src/player/: mod.rs
src/services/: gig.rs  mod.rs  track.rs
src/views/: browser.rs  contact_view.rs  dialogs.rs  gig_sidebar.rs  gig_workspace.rs  mod.rs  utils.rs
tests/: transcode.rs
tizen-app/: Cargo.toml  Trunk.toml  app.html  build.sh  index.html  style.css
tizen-app/public/: config.xml
tizen-app/src/: discovery.rs  lib.rs
