[package]
name = "dj-rs"
version = "0.1.0"
authors = ["Jonas Liljestrand <jonas.liljestrand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "fs", "macros", "process"] }
rupnp = "1"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
local-ip-address = "0.6"
rodio = { version = "0.17", features = ["mp3"] }
cpal = { version = "0.15", features = ["jack"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
gdk = "0.13"
futures = "0.3.32"
tokio-util = { version = "0.7", features = ["io"] }
pango = "0.22.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_22"]

[dependencies.gio]
version = "*"
features = ["v2_44"]
