[package]
name = "dj-rs"
version = "0.1.0"
authors = ["Jonas Liljestrand <jonas.liljestrand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "fs", "macros", "process"] }
rupnp = "1"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
local-ip-address = "0.6"
rodio = { version = "0.19", features = ["symphonia-all"] }
cpal = { version = "0.15", features = ["jack"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
gdk = "0.13"
gdk-pixbuf = "0.9"
futures = "0.3.32"
tokio-util = { version = "0.7", features = ["io"] }
pango = "0.22.0"
indexmap = "2.13.0"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
webbrowser = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2"
strsim = "0.11"
librespot-core = { git = "https://github.com/librespot-org/librespot", branch = "dev", default-features = false, features = ["native-tls"] }
librespot-playback = { git = "https://github.com/librespot-org/librespot", branch = "dev", default-features = false, features = ["native-tls"] }
uuid = { version = "1", features = ["v4"] }
lofty = "0.22"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_22"]

[dependencies.gio]
version = "*"
features = ["v2_44"]
