[package]
name = "dj-rs-tv"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "console",
    "Element", "DomRect", "HtmlElement", "EventTarget",
    "MouseEvent",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
